--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "homepage": "https://MarinaArmenovnaDev.github.io/MY_PORTFOLIO",
   "dependencies": {
     "@babel/core": "7.16.0",
+    "@emailjs/browser": "^4.4.1",
+    "@emotion/react": "^11.14.0",
     "@pmmmwh/react-refresh-webpack-plugin": "0.5.3",
     "@svgr/webpack": "5.5.0",
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "13.0.0",
     "@testing-library/user-event": "13.2.1",
+    "@tsparticles/react": "^3.0.0",
     "@types/jest": "27.0.1",
     "@types/node": "16.7.13",
     "@types/react": "18.0.0",
     "@types/react-dom": "18.0.0",
+    "@types/react-scroll": "^1.8.10",
+    "animate.css": "^4.1.1",
     "babel-jest": "27.4.2",
     "babel-loader": "8.2.3",
     "babel-plugin-named-asset-import": "0.3.8",
@@ -32,12 +37,14 @@
     "file-loader": "6.2.0",
     "fs-extra": "10.0.0",
     "gh-pages": "^6.2.0",
+    "gsap": "^3.12.7",
     "html-webpack-plugin": "5.5.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "27.4.3",
     "jest-resolve": "27.4.2",
     "jest-watch-typeahead": "1.0.0",
     "mini-css-extract-plugin": "2.4.5",
+    "motion": "^11.18.0",
     "postcss": "8.4.4",
     "postcss-flexbugs-fixes": "5.0.2",
     "postcss-loader": "6.2.1",
@@ -45,10 +52,16 @@
     "postcss-preset-env": "7.0.1",
     "prompts": "2.4.2",
     "react": "18.2.0",
+    "react-alice-carousel": "^2.9.1",
     "react-app-polyfill": "3.0.0",
+    "react-awesome-reveal": "^4.3.1",
     "react-dev-utils": "12.0.1",
     "react-dom": "18.2.0",
+    "react-parallax": "^3.5.1",
+    "react-parallax-tilt": "^1.7.272",
     "react-refresh": "0.11.0",
+    "react-scroll": "^1.9.0",
+    "react-tsparticles": "^2.12.2",
     "resolve": "1.20.0",
     "resolve-url-loader": "4.0.0",
     "sass-loader": "12.3.0",
@@ -58,7 +71,11 @@
     "styled-components": "5.3.6",
     "tailwindcss": "3.0.2",
     "terser-webpack-plugin": "5.2.5",
+    "tsparticles": "^3.7.1",
+    "tsparticles-engine": "^2.12.0",
+    "tsparticles-slim": "^2.12.0",
     "typescript": "4.4.2",
+    "typewriter-effect": "^2.21.0",
     "web-vitals": "2.1.0",
     "webpack": "5.64.4",
     "webpack-dev-server": "4.6.0",
